# minishell-c

./: CMakeLists.txt  README.md
include/: builtint.h  executor.h  parser.h  process.h
src/: builtin.c  main.c  parser.c  shell.c
